samples/_failures_safe/1761453578_e4b01a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16aafb7a.c:162:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 | void display
      | ^~~~
